# git-log

./: .gitignore  idea.md
.agents/rules/: python-pro.md
backend/: pyproject.toml
backend/app/: main.py
backend/app/api/: dependencies.py  main.py
backend/app/api/routes/: auth.py  health.py  integrations.py  projects.py  reports.py  users.py
backend/app/core/: config.py  security.py
backend/app/db/: session.py
backend/app/models/: __init__.py  base.py  integration.py  project.py  report.py  user.py
backend/app/schemas/: report.py  user.py
backend/app/services/: ai_service.py  github_service.py
backend/migrations/: env.py
backend/migrations/versions/: 11e0281847c8_add_branch_name_to_reports.py  6b116ee5d3c8_initial_schema.py  90b5979a4623_add_report_table.py
frontend/: package.json  pnpm-lock.yaml
frontend/src/: App.tsx  index.css
frontend/src/api/: auth.ts  integrations.ts  reports.ts
frontend/src/components/AILoader/: AILoader.css  AILoader.tsx
frontend/src/components/Badge/: Badge.css  Badge.tsx
frontend/src/components/Button/: Button.css  Button.tsx
frontend/src/components/Card/: Card.css  Card.tsx
frontend/src/components/Input/: Input.css  Input.tsx
frontend/src/components/ProtectedRoute/: ProtectedRoute.tsx
frontend/src/components/Table/: Table.css  Table.tsx
frontend/src/layouts/DashboardLayout/: DashboardLayout.css  DashboardLayout.tsx
frontend/src/layouts/Sidebar/: Sidebar.css  Sidebar.tsx
frontend/src/pages/ActivityLog/: ActivityLog.css  ActivityLog.tsx
frontend/src/pages/Auth/: Auth.css  Login.tsx  Signup.tsx
(+18 files in other folders)
