[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.5",
    "asyncpg>=0.31.0",
    "fastapi>=0.138.1",
    "httpx>=0.28.1",
    "openai>=2.44.0",
    "pydantic-settings>=2.14.2",
    "pyjwt>=2.13.0",
    "sqlalchemy>=2.0.51",
    "supabase>=2.31.0",
    "uvicorn>=0.49.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.20",
]
